--- a/css/student_css/style_studDash.css
+++ b/css/student_css/style_studDash.css
@@ -1,122 +1,131 @@
+/* Static Page */
 *{
   margin: 0;
   padding: 0;
   user-select: none;
   box-sizing: border-box;
-  font-family: Roboto,Roboto Condensed,Generica, sans-serif;
   list-style: none;  
 }
 
+/* Body */
 body{  
-  font-family: Roboto,Roboto Thin,Generica, sans-serif;
-  background-image: url('../img/adminBG.png');
+  font-family: Roboto,Roboto Thin,Generica, sans-serif;  
+  background-image: url("../../img/studentBG.png");
   background-size: cover;
   font-size: 100%;
   background-attachment: fixed;
   width: auto;
   min-height: 100%;
 }
+
+/* Top Navigation */
 nav{
-  background: #1d6986;
+  background: #f8f8f8;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
               0 3px 6px rgba(0, 0, 0, .23);
   width: auto;
   z-index: 3;
-  display: flex;
+}
+nav:before{
+  min-height: 100%;
 }
 nav:after{
   content: '';
   clear: both;
   display: table;
 }
-h2.aLogo-txt1{
+nav h2{
   margin-top: 3px;
   font-family: Roboto Regular, sans-serif;
   font-weight: inherit;
-  font-size: 100%;
+  font-size: 180%;
   margin-bottom: 0px;
   letter-spacing: 6px;
-  text-decoration: none;
+  color: #124254;
 }
-h2.aLogo-txt1 a{
+h2 a.Atext-link{
   text-decoration: none;
-  color: #ffffff;
+  color: #124254;
 }
-h3.aLogo-txt2{
+nav h3{
   margin-top: 0px;
-  color: #ffffff;
+  color: #124254;
   padding-top: 5px;
-  font-weight: lighter;
-  font-size: 120%;
+  font-weight: inherit;
+  font-size: 200%;
   margin-bottom: 0px;
   letter-spacing: 6px;
   font-family: Generica regular, sans-serif;
 }
-h3.aLogo-txt2 a{
+h3 a.Atext-link{
   text-decoration: none;
-  color: #ffffff;
+  color: #124254;
 }
-div.aLogo{
+nav .Alogo{
   float: left;
   position: relative;
   line-height: 80px;
   margin-top: 14px;
   margin-left: 40px;
 }
+
+
+/* Top Navigation Item List */
 nav ul{
   float: right;
   padding: 0;
   height: 80px;
+  /* margin-right: 40px; */
   margin-bottom: 0;
   list-style: none;
   position: relative;
   text-align: center;
   z-index: 4;
 }
-nav ul li{ /*Accounts, Election, Candidates, etc*/
-  /* float: left; */
+nav ul li{
+  float: left;
   display: inline-block;
-  height: 80px; /*80px ang dati*/
-  background: #1d6986;
+  height: 80px;
+  background: #f8f8f8;
   text-align: center;
   /* margin: 0 5px; */
   width: 150px;
 }
 nav ul li a{
-  color: rgb(255, 255, 255);
+  color: black;
   line-height: 70px;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 2em;
   padding: 8px 15px;
   letter-spacing: 1px;
   font-family: Roboto Light, sans-serif;
 }
 nav ul li a:visited {
-  color: #ffffff;
+  color: black;
   text-decoration: none;
 }
 nav ul li a:hover{
-  color: #ffc423;
+  color: black;
   text-decoration: none;
 }
 nav ul li a:active{
   text-decoration: none;
 }
 nav ul li:hover{
-  background-color: #124254;
+  background-color: #fece4b;
 }
 nav ul li a:active {
   color: green;
 }
-nav ul ul{ /*dropdown container*/
+nav ul ul{
   position: absolute;
   top: 90px;
-  border-top: 3px solid #124254;
+  border-top: 3px solid #18566e;
   opacity: 0;
   visibility: hidden;
   transition: top .3s;
 }
-nav ul ul li{ /*dropdown list*/
+nav ul ul li{
  height: 50px;
  position: relative;
  margin: 0px;
@@ -125,6 +134,9 @@ nav ul ul li{ /*dropdown list*/
 }
 nav ul ul li a{
   line-height: 50px;
+}
+nav ul ul li a.Aelec-text{
+  font-size: 1.2em;
 }
 nav ul ul li .logout::before {
   content: "\f2f5";
@@ -135,16 +147,16 @@ nav ul ul li a:link{
   color:rgb(0, 0, 0);
 }
 nav ul ul li a:visited {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 nav ul ul li a:hover{
-  color: #1b1b1b;
+  color: white;
   box-shadow: none;
   text-decoration: none;
 }
 nav ul ul li:hover{
-  background-color: #e0a900;
+  background-color: #124254;
   text-decoration: none;
 }
 nav ul ul li a:active{
@@ -166,7 +178,7 @@ nav ul li:hover > ul{
   visibility: visible;
 }
 nav ul ul li{
-  background: #ffc423;
+  background: #18566e;
   position: relative;
   margin: 0px;
   width: 150px;
@@ -174,9 +186,10 @@ nav ul ul li{
   float: none;
   display: list-item;
   border-bottom: 1px solid rgba(0,0,0,0.3);
-  z-index: 2;
+  z-index: 1;
 }
 nav ul ul li a{
+  color: black;
   line-height: 50px;
   font-family: Roboto bold, sans-serif;
 }
@@ -186,43 +199,49 @@ nav ul ul ul li{
   top: -60px;
   left: 150px;
 }
-.Ashow, .ADicon{
-  display: none
-}
-
-.nav-toggle1, .nav-toggle2, .nav-toggle3,
-.nav-toggle4, .nav-toggle5, .nav-toggle6{
+.Ashow,.Aicon,input{
   display: none;
+}
+nav img.Auser-profile{
+  margin-top: 0;
+  height: 40px;
+  width: 40px;
 }
 /* .fa-plus{
   font-size: 15px;
   margin-left: 40px;
 } */
 
+
+
+/* Mobile */
 @media all and (max-width: 968px) {
   nav ul{
     margin-right: 0px;
     margin-left: 0px;
     float: left;
   }
-  nav .aLogo{
-    margin-bottom: 3%;
+  /* nav .logo{
+    padding-left: 30px;
     width: auto;
     float: left;
-  }
+  } */
   .Ashow + a, ul{
     display: none;
   }
   nav ul li,nav ul ul li{
+    border-top: 3px solid #18566e;
     display: block;
     width: 100%;
   }
   nav ul li a:hover{
     box-shadow: none;
   }
+
   .Ashow{
     display: block;
-    color: #ffffff;
+    background-color: #18566e;
+    color: white;
     font-size: 1.2em;
     padding: 0 20px;
     line-height: 70px;
@@ -231,9 +250,9 @@ nav ul ul ul li{
   .Ashow:hover{
     color:white;
   }
-  .ADicon{
+  .Aicon{
     display: block;
-    color:#ffffff;
+    color:  black;
     position: absolute;
     top: 0;
     right: 40px;
@@ -273,22 +292,12 @@ nav ul ul ul li{
     content: '\f00d';
   } 
 }
-p{
-  font-size: 30px;
-  font-weight: 500;
-  font-family: Generica regular, sans-serif;
-}
-/* Container for flexboxes */
-section {
-  display: -webkit-flex;
-  display: flex;
-  margin-left: 30px;
-  margin-top: 100px;
-  float: left;
-}
+
+
+/* Left Content */
 article p{
   font-family: Roboto regular, sans-serif;
-  color: white;
+  color: #124254;
   font-weight: inherit;
   font-size: 20px;
   letter-spacing: 3px;
@@ -296,12 +305,26 @@ article p{
 }
 article h1{
   font-family: Generica regular, sans-serif;
-  color: #ffc423;
+  color: #18566e;
   font-weight: inherit;
   font-size: 55px;
   position: relative;
   letter-spacing: 3px;
   margin-top: 10px;
+}
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+  margin-left: 30px;
+  margin-top: 100px;
+  max-width: 800px;
+  float: left;
+}
+#section-container{
+  min-height: 100%;
+  overflow: auto;
+  padding-bottom: 12%;
 }
 /* Style the content */
 article {
@@ -311,14 +334,14 @@ article {
   padding: 10px;
 }
 /*For logos on top of welcome banner*/
-img.logos{
+img.Alogos{
   float: left;
   padding-left: 10px;
   height: 90px;
   width: 100px;
   margin-bottom: 2em;
 }
-.logo-container{
+.Alogo-container{
   position:relative;
   /* float: left; */
   display: -webkit-flex;
@@ -329,40 +352,33 @@ img.logos{
 } 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
-  body, section, #ADaside-container, #ADcountdown, #AD-CD-contents {
+  body, section, .Acontainer {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
-  .ADcountdown{
-    font-size: auto;
-  }
-  #AD-CD-contents{
-    display: block;
-    font-size: auto;
-  }
 }
+
 /*countdown*/
 aside{
   color: #333;
   float: left;
   text-align: center;
-  margin-right: 30px;
-  margin-left: 30px;
-  top: 80px;
-  padding-bottom: 50px;
+  margin-left: 50px;
+  top: 50px;
+  bottom: 0;
   position: relative;
   max-width: 500px;
-  float: right;
+
 }
-#AD-CD-headline {
+div h1 {
   font-weight: normal;
   letter-spacing: .125rem;
   text-transform: uppercase;
-  font-size: 2.5em;
+  font-size: 4em;
   color: black;
   margin-bottom: .8em;
 }
-#AD-CD-contents{
+div ul{
   /* max-width: 90%; */
   border: 1px solid #ffc423;
   border-width: 3px;
@@ -371,120 +387,39 @@ aside{
 }
 div li {
   display: inline-block;
-  font-size: 1em;
+  font-size: 1.5em;
   list-style-type: none;
-  padding: 5%;
+  padding: 1em;
   text-transform: uppercase;
-  color: rgb(255, 255, 255);
+  color: black;
 }
 div li span {
   display: block;
-  font-size: 2.5rem;
+  font-size: 4.5rem;
 
 }
 aside p.Aelec-guide-txt{
   font-family: Roboto Regular, sans-serif;
   text-align: justify;
-  font-size: 1em;
-  margin-top: 1em;
-  margin-bottom: 0;
+  font-size: 1.6em;
+  margin-top: 3em;
 }
-#ADaside-container{
+#aside-container{
   min-height: 100%;
-  /* overflow: auto; */
-  padding-bottom: 50px;
+  overflow: auto;
+  padding-bottom: 5%;
 }
 
-/*footer*/
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: auto;
-  padding: 5px;
-  background-color: #124254;
-  text-align: center;
-}
-div p.footer-txt{
+
+
+/* Footer */
+footer{
+  background-color: #fece4b;
   position: relative;
+  height: 5%;
   margin-top: auto;
-  margin-bottom: auto;
-  font-family: Roboto Regular, sans-serif;
+  clear: both;
+  text-align: center;
+  padding: 5px 0px;
   letter-spacing: 7px;
-  font-size: 10px;
-  color: #ffffff;
-}
-nav img.user-profile{
-  margin-top: 0;
-  height: 40px;
-  width: 40px;
-}
-
-/*Datatable*/
-div.container {
-  background-color:#dddddd;
-  padding: 1rem;
-  margin-top: 3%;
-  margin-bottom: 3%;
-  border: 2px solid #124254;
-  width: 100% !important;
-  height: auto;
-  opacity: 80%;
-  font-size: .8rem;
-}
-#ADdataTable {
-  border-collapse: collapse !important;
-  table-layout: auto;
-  margin: 0px;
-  text-align: center;
-  opacity: 100%;
-  width: 100% !important;
-}
-thead {
-  width: 100%;
-  color: #EEEEEE;
-  background-color: #18566e;
-  text-align: center;
-  opacity: 100%;
-}
-thead input {
-  width: 100%;
-}
-th {
-  color: #ffffff;
-  background-color: #18566e;
-  text-align: center;
-  font-size: .8rem;
-  font-family: Roboto regular, sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px; 
-  border: 1px solid #124254 !important;
-}
-td {
-    border: 1px solid #124254;
-    padding: 0px;
-    max-width: 150px;
-    max-height: 150px;
-    overflow: hidden;
-    font-size: .8rem;
-}
-#ADheader{
-  position: relative;
-  z-index: -1;
-  padding: 6px;
-  background: #124254;
-  color: #ffffff;
-  width: 100%;
-  text-align: center;
-  font-family: Roboto Regular, sans-serif;
-  letter-spacing: 6px;
-}
-h2.aHeader-txt{
-  font-size: 24px;
-  margin-top: .5%;
-  margin-bottom: .5%;
-}
-.row{
-  margin: 0;
 }
