--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -15,7 +15,7 @@
 }
 
 .Uright{
-  width: 76%;
+  width: 100%;
   height: 100%;
   float: left;
   display: flex;
@@ -395,20 +395,30 @@ img.Alogos{
   margin-top: 0px;
   max-width: 700px;
 } 
+
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
   body, section,  .Uwrapper{
     -webkit-flex-direction: column;
-    flex-direction: column;
   }
 
 .Uleft {
    padding-bottom: 25px;
+
   }
 .Uright{
-  overflow-x:scroll;
+  overflow-y:scroll;
   margin-left: auto;
+  height:320px;
   margin-right: auto;
+  width:320px;
+}
+.column{
+  margin:0px;
+}
+
+.scroll{
+  padding-bottom: 5px;
 }
 }
 
@@ -502,6 +512,8 @@ margin-left: auto;
     float: right;
     padding: 0 10px;
     margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Urow {
