--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -84,7 +84,7 @@ body{
   width: auto;
   min-height: 100%;
 }
-nav{
+/* nav{
   background: #f8f8f8;
   box-shadow: 0 10px 20px rgba(0, 0, 0, .15 ),
               0 3px 6px rgba(0, 0, 0, .23);
@@ -128,7 +128,6 @@ nav ul{
   float: right;
   padding: 0;
   height: 80px;
-  /* margin-right: 40px; */
   margin-bottom: 0;
   list-style: none;
   position: relative;
@@ -136,12 +135,11 @@ nav ul{
   z-index: 4;
 }
 nav ul li{
-  float: left;
+  
   display: inline-block;
   height: 80px;
   background: #f8f8f8;
   text-align: center;
-  /* margin: 0 5px; */
   width: 150px;
 }
 nav ul li a{
@@ -259,7 +257,7 @@ nav img.Auser-profile{
   margin-top: 0;
   height: 40px;
   width: 40px;
-}
+} */
 /* .fa-plus{
   font-size: 15px;
   margin-left: 40px;
@@ -366,7 +364,7 @@ section {
   display: -webkit-flex;
   display: flex;
   margin-left: 30px;
-  margin-top: 100px;
+  margin-top: 20px;
   max-width: 800px;
   float: left;
 }
@@ -480,12 +478,11 @@ aside p.Aelec-guide-txt{
   overflow: auto;
   padding-bottom: 5%;
 }
-#section-container{
-  min-height: 100%;
+/* #section-container{
+  min-height: 70%;
   overflow: auto;
-  padding-bottom: 12%;
-}
-
+  padding-bottom: 5%;
+} */
 
 footer{
   background-color: #fece4b;
