--- a/css/student_css/bootstrap_vote.css
+++ b/css/student_css/bootstrap_vote.css
@@ -1145,7 +1145,6 @@ img {
 }
 hr {
   margin-top: 20px;
-  margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #eeeeee;
 }
@@ -3101,7 +3100,7 @@ select[multiple].input-lg {
     font-size: 12px;
   }
 }
-/* .btn {
+.btn {
   display: inline-block;
   margin-bottom: 0;
   font-weight: normal;
@@ -3121,7 +3120,7 @@ select[multiple].input-lg {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-} */
+}
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus,
@@ -3131,10 +3130,16 @@ select[multiple].input-lg {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
+.btn:hover{
+  color: white;
+}
+
 .btn:hover,
 .btn:focus,
 .btn.focus {
-  color: #333;
+  /* color: #333; */
+  /* color: #fece4b; */
   text-decoration: none;
 }
 .btn:active,
