monitoring + few candidate fix

--- a/css/student_css/bootstrap_monitor.css
+++ b/css/student_css/bootstrap_monitor.css
@@ -88,12 +88,15 @@ sub {
   bottom: -0.25em;
 }
 
+
 img {
   border: 0;
-  margin-top: 5px;
+  margin-top: 3%;
   max-width: 150px;
   max-height:150px;
 }
+
+
 
 svg:not(:root) {
   overflow: hidden;
