--- a/css/student_css/style_studNav.css
+++ b/css/student_css/style_studNav.css
@@ -25,6 +25,8 @@
                 0 3px 6px rgba(0, 0, 0, .23);
     width: 100%;
     z-index: 500;
+    position: sticky;
+    top: 0;
   }
   nav:before{
     min-height: 100%;
